--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>servlet-api</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>tomcat</groupId>
+            <artifactId>catalina</artifactId>
+            <version>4.0.6</version>
+        </dependency>
     </dependencies>
 </project>
